Small tweaks. Panel passes make distcheck.
(Old svn revision: 4143)

--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,28 @@
 Noteworthy updates to the xfce4 panel should be recorded here.
 
+* 2004-09-11 Jasper Huijsmans <jasper@xfce.org>
+
+Use basedit spec to locate config file. Rename xfce4rc to contents.xml.
+
+* 2004-09-06 Jasper Huijsmans <jasper@xfce.org>
+
+Change the fallback (default) icons to the ones from the Rodent theme by
+Francois, very pretty.
+
+* 2004-07-26 Benedikt Meurer <benny@xfce.org>
+
+Add support for new KIOSK mode. Much better than env variables.
+
+* 2004-07-21 Jasper Huijsmans <jasper@xfce.org>
+
+Fix autohide and right-click menu interaction.
+
+* 2004-06-18 Jasper Huijsmans <jasper@xfce.org>
+
+  - Icon theme support : no more panel-specific themes, the panel will now
+    follow the icon theme set in the user interface dialog.
+  - Set partial struts and use a docktype window
+
 * 2004-05-01  Jasper Huijsmans <jasper@xfce.org>
 
 Add multihead support. The user needs to set DISPLAY properly to start a new
