--- a/po/nl.po
+++ b/po/nl.po
@@ -230,7 +230,7 @@ msgstr "Terminal"
 
 #: panel/mcs_client.c:170
 msgid "Settings manager not available"
-msgstr "Optiemanager niet beschikbaar"
+msgstr "Configuratiemanager niet beschikbaar"
 
 #: panel/popup.c:267
 msgid "Menu"
@@ -298,7 +298,7 @@ msgstr "Automatisch verbergen:"
 
 #: settings/xfce_settings_dialog.c:465
 msgid "Xfce Panel Settings"
-msgstr "Xfce Panel Opties"
+msgstr "Instellingen Xfce Panel"
 
 #: settings/xfce_settings_dialog.c:475
 msgid "Appearance"
@@ -398,7 +398,7 @@ msgstr "Afsluiten"
 #: plugins/systembuttons/systembuttons.c:172
 #: plugins/systembuttons/systembuttons.c:520
 msgid "Setup"
-msgstr "Opties"
+msgstr "Instellingen"
 
 #: plugins/systembuttons/systembuttons.c:173
 #: plugins/systembuttons/systembuttons.c:521
