--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -1,19 +1,20 @@
+# #-#-#-#-#  zh_CN.po (PACKAGE VERSION)  #-#-#-#-#
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <edscott@imp.mx>, 2003.
+# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-09-21 13:35+0200\n"
-"PO-Revision-Date: 2004-06-11 16:52+0200\n"
+"PO-Revision-Date: 2004-09-28 01:05-0700\n"
 "Last-Translator: Yongtao Yang <yongtao.yang@telia.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Report-Msgid-Bugs-To: \n"
 
 #: panel/xfce_support.c:514
 msgid "Select file"
@@ -21,24 +22,19 @@ msgstr "选择文件"
 
 #: panel/settings.c:179
 msgid "No data was found. The panel will be empty."
-msgstr ""
+msgstr "未发现数据，面板内容将是空的。"
 
 #: panel/controls_dialog.c:89 panel/item_dialog.c:1157
 msgid "Position:"
-msgstr "位置"
+msgstr "位置："
 
 #: panel/controls_dialog.c:153
-#, fuzzy
 msgid "Item properties"
-msgstr "/属性(_P)..."
+msgstr "条目属性(_P)..."
 
 #: panel/controls_dialog.c:207 panel/controls.c:691
-#, fuzzy
 msgid "Removing the item will also remove its popup menu."
-msgstr ""
-"删除一个条目将同时删除其弹出菜单。\n"
-"\n"
-"你希望删除该条目吗?"
+msgstr "删除一个条目将同时删除其弹出菜单。"
 
 #: panel/item_dialog.c:123 panel/item_dialog.c:551
 msgid "Select command"
@@ -46,15 +42,15 @@ msgstr "选择命令"
 
 #: panel/item_dialog.c:264
 msgid "Command:"
-msgstr "命令:"
+msgstr "命令："
 
 #: panel/item_dialog.c:307
 msgid "Run in _terminal"
-msgstr "在终端中运行(_T)"
+msgstr "在终端中运行(_t)"
 
 #: panel/item_dialog.c:325
 msgid "Use startup _notification"
-msgstr "使用启动提示(_N)"
+msgstr "使用启动提示(_n)"
 
 #: panel/item_dialog.c:511
 msgid "Other Icon"
@@ -82,9 +78,8 @@ msgstr "改变菜单条目"
 
 #. add buttons
 #: panel/item_dialog.c:1200 panel/controls.c:728
-#, fuzzy
 msgid "_Remove"
-msgstr "/删除(_R)"
+msgstr "删除(_R)"
 
 #: panel/item_dialog.c:1212 panel/item.c:668
 msgid "Launcher"
@@ -107,7 +102,7 @@ msgid "Are you sure you want to exit?"
 msgstr "你确定要退出吗?"
 
 #: panel/main.c:398
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "\n"
 " The Xfce Panel\n"
@@ -119,34 +114,38 @@ msgid ""
 " Licensed under the GNU GPL.\n"
 "\n"
 msgstr ""
-"%s, 版本 %s\n"
-"Xfce桌面环境的组成部分\n"
-"http://www.xfce.org\n"
+"\n"
+" Xfce 面板\n"
+" 版本 %s\n"
+"\n"
+" Xfce桌面环境的组成部分\n"
+" http://www.xfce.org\n"
+"\n"
+" 以 GNU GPL 许可证发布。\n"
+"\n"
 
 #: panel/main.c:472
 #, c-format
 msgid "%s: Successfully started without session management"
-msgstr ""
+msgstr "%s：不带会话管理方式启动成功"
 
 #: panel/main.c:477
 #, c-format
 msgid "%s: Successfully started with session management"
-msgstr ""
+msgstr "%s：带会话管理方式启动成功"
 
 #: panel/controls.c:646
 #, c-format
 msgid "Could not create panel item \"%s\"."
-msgstr ""
+msgstr "无法创建条目 “%s ”。"
 
 #: panel/controls.c:723 panel/panel.c:562
-#, fuzzy
 msgid "_Properties..."
-msgstr "/属性(_P)..."
+msgstr "属性(_P)..."
 
 #: panel/controls.c:737 panel/panel.c:552
-#, fuzzy
 msgid "Add _new item"
-msgstr "/添加新条目(_N)"
+msgstr "添加新条目(_N)"
 
 #: panel/controls.c:1020
 msgid "This item has no configuration options"
@@ -158,29 +157,24 @@ msgid "Xfce Panel"
 msgstr "Xfce面板"
 
 #: panel/panel.c:567
-#, fuzzy
 msgid "_About Xfce"
-msgstr "/关于Xfce(_A)"
+msgstr "关于Xfce(_A)"
 
 #: panel/panel.c:572
-#, fuzzy
 msgid "_Help"
-msgstr "/帮助(_H)"
+msgstr "帮助(_H)"
 
 #: panel/panel.c:581
-#, fuzzy
 msgid "_Lock screen"
-msgstr "/锁住屏幕(_L)"
+msgstr "锁住屏幕(_L)"
 
 #: panel/panel.c:586
-#, fuzzy
 msgid "_Restart"
-msgstr "恢复(_R)"
+msgstr "重新启动(_R)"
 
 #: panel/panel.c:595
-#, fuzzy
 msgid "E_xit"
-msgstr "/退出(_X)"
+msgstr "退出(_X)"
 
 #: panel/icons.c:60
 msgid "Default"
@@ -256,7 +250,7 @@ msgstr "大"
 
 #: settings/xfce_settings_dialog.c:100
 msgid "Huge"
-msgstr ""
+msgstr "巨大"
 
 #: settings/xfce_settings_dialog.c:176
 msgid "Horizontal"
@@ -284,23 +278,23 @@ msgstr "底部"
 
 #: settings/xfce_settings_dialog.c:269
 msgid "Panel size:"
-msgstr "面板大小:"
+msgstr "面板大小："
 
 #: settings/xfce_settings_dialog.c:285
 msgid "Panel orientation:"
-msgstr "面板方向:"
+msgstr "面板方向："
 
 #: settings/xfce_settings_dialog.c:304
 msgid "Popup position:"
-msgstr "弹出菜单位置:"
+msgstr "弹出菜单位置："
 
 #: settings/xfce_settings_dialog.c:343
 msgid "Always on top:"
-msgstr ""
+msgstr "总是在顶层："
 
 #: settings/xfce_settings_dialog.c:396
 msgid "Autohide:"
-msgstr "自动隐藏"
+msgstr "自动隐藏："
 
 #: settings/xfce_settings_dialog.c:465
 msgid "Xfce Panel Settings"
@@ -344,7 +338,7 @@ msgstr "数字液晶显示"
 
 #: plugins/clock/clock.c:506
 msgid "Hour mode:"
-msgstr "Tryb godzin"
+msgstr "小时显示模式："
 
 #: plugins/clock/clock.c:513
 msgid "24 hour"
@@ -368,11 +362,11 @@ msgstr "Xfce时钟"
 
 #: plugins/pager/pager.c:311
 msgid "Number of rows:"
-msgstr ""
+msgstr "行数："
 
 #: plugins/pager/pager.c:313
 msgid "Number of columns:"
-msgstr ""
+msgstr "列数："
 
 #: plugins/pager/pager.c:360
 msgid "Graphical pager"
@@ -426,9 +420,8 @@ msgstr "按钮2:"
 
 #. checkbox
 #: plugins/systembuttons/systembuttons.c:579
-#, fuzzy
 msgid "_Hide"
-msgstr "/帮助(_H)"
+msgstr "隐藏(_H)"
 
 #: plugins/systembuttons/systembuttons.c:616
 msgid "System buttons"
@@ -436,21 +429,19 @@ msgstr "系统按钮"
 
 #: plugins/separator/separator.c:155
 msgid "Separator"
-msgstr "分隔线"
+msgstr "隔离符"
 
 #: plugins/mailcheck/mailcheck.c:787
 msgid "Mail box:"
 msgstr "邮件箱:"
 
 #: plugins/mailcheck/mailcheck.c:824
-#, fuzzy
 msgid "New mail command:"
-msgstr "邮件命令:"
+msgstr "新邮件命令:"
 
 #: plugins/mailcheck/mailcheck.c:838
-#, fuzzy
 msgid "Command to run when new mail arrives"
-msgstr "在面板上点击该按钮时所执行的命令"
+msgstr "当新邮件到达时所执行的命令"
 
 #: plugins/mailcheck/mailcheck.c:868
 msgid "Command to run when the button on the panel is clicked"
@@ -461,136 +452,9 @@ msgid "Interval (sec):"
 msgstr "间隔(秒):"
 
 #: plugins/mailcheck/mailcheck.c:965
-#, fuzzy
 msgid "Mail checker"
-msgstr "检查邮件"
+msgstr "邮件检查程序"
 
-#~ msgid "Remove"
-#~ msgstr "删除"
 
-#~ msgid "Show two buttons:"
-#~ msgstr "显示两个按钮"
 
-#~ msgid "Change item"
-#~ msgstr "改变条目"
 
-#~ msgid "Menu:"
-#~ msgstr "菜单:"
-
-#~ msgid "/Xfce Panel"
-#~ msgstr "/Xfce启动面板"
-
-#~ msgid "/Add _new item"
-#~ msgstr "/添加新条目(_N)"
-
-#~ msgid "/_Properties..."
-#~ msgstr "/属性(_P)..."
-
-#~ msgid "Select icon"
-#~ msgstr "选择图标"
-
-#~ msgid "Icon:"
-#~ msgstr "图标:"
-
-#~ msgid "Icon Preview"
-#~ msgstr "图标预览"
-
-#~ msgid ""
-#~ "Your window manager does not seem to support the new window manager hints "
-#~ "as defined on http://www.freedesktop.org. \n"
-#~ "Some Xfce features may not work as intended."
-#~ msgstr ""
-#~ "你的窗口管理器似乎不支持http://www.freedesktop.org所定义的新的窗口管理器提"
-#~ "示 \n"
-#~ "某些Xfce的功能可能无法正常运行。"
-
-#~ msgid "/_Settings manager"
-#~ msgstr "/配置管理器(_S)"
-
-#~ msgid "Tiny"
-#~ msgstr "极小"
-
-#~ msgid "Icon theme:"
-#~ msgstr "图标主题:"
-
-#~ msgid "Panel layer:"
-#~ msgstr "面板所在图层:"
-
-#~ msgid "Normal"
-#~ msgstr "正常"
-
-#~ msgid "Center the panel:"
-#~ msgstr "面板居中:"
-
-#~ msgid "Set"
-#~ msgstr "配置"
-
-#~ msgid "Position"
-#~ msgstr "位置"
-
-#~ msgid "Sunday"
-#~ msgstr "星期天"
-
-#~ msgid "Monday"
-#~ msgstr "星期一"
-
-#~ msgid "Tuesday"
-#~ msgstr "星期二"
-
-#~ msgid "Wednesday"
-#~ msgstr "星期三"
-
-#~ msgid "Thursday"
-#~ msgstr "星期四"
-
-#~ msgid "Friday"
-#~ msgstr "星期五"
-
-#~ msgid "Saturday"
-#~ msgstr "星期六"
-
-#~ msgid "January"
-#~ msgstr "一月"
-
-#~ msgid "February"
-#~ msgstr "二月"
-
-#~ msgid "March"
-#~ msgstr "三月"
-
-#~ msgid "April"
-#~ msgstr "四月"
-
-#~ msgid "May"
-#~ msgstr "五月"
-
-#~ msgid "June"
-#~ msgstr "六月"
-
-#~ msgid "July"
-#~ msgstr "七月"
-
-#~ msgid "August"
-#~ msgstr "八月"
-
-#~ msgid "September"
-#~ msgstr "Wrzesień"
-
-#~ msgid "October"
-#~ msgstr "十月"
-
-#~ msgid "November"
-#~ msgstr "十一月"
-
-#~ msgid "December"
-#~ msgstr "十二月"
-
-#~ msgid "_Done"
-#~ msgstr "完成(_D)"
-
-#~ msgid "Type:"
-#~ msgstr "类型:"
-
-#, fuzzy
-#~ msgid "Add item"
-#~ msgstr "添加新条目"
