--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -1,6 +1,7 @@
 # Copyright (C) 2003 THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the xfce4-panel package.
 # umm <umm@pchome.com.tw>, 2003.
+# Minor updates by Ambrose Li <acli@ada.dhs.org>, 2004.
 #
 msgid ""
 msgstr ""
@@ -8,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-09-21 13:35+0200\n"
 "PO-Revision-Date: 2004-04-20 16:21+0800\n"
-"Last-Translator: umm <umm@pchome.com.tw>\n"
+"Last-Translator: Ambrose Li <acli@ada.dhs.org>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -20,24 +21,19 @@ msgstr "選擇檔案"
 
 #: panel/settings.c:179
 msgid "No data was found. The panel will be empty."
-msgstr ""
+msgstr "找不到任何資料，面板將會留空。"
 
 #: panel/controls_dialog.c:89 panel/item_dialog.c:1157
 msgid "Position:"
 msgstr "位置："
 
 #: panel/controls_dialog.c:153
-#, fuzzy
 msgid "Item properties"
-msgstr "/屬性(_P)..."
+msgstr "項目屬性"
 
 #: panel/controls_dialog.c:207 panel/controls.c:691
-#, fuzzy
 msgid "Removing the item will also remove its popup menu."
-msgstr ""
-"移除一個項目將同時移除其彈出選單.\n"
-"\n"
-"你希望移除該項目嗎？"
+msgstr "移除一個項目將同時移除其附屬的彈出選單。"
 
 #: panel/item_dialog.c:123 panel/item_dialog.c:551
 msgid "Select command"
@@ -59,9 +55,10 @@ msgstr "使用啟動提示(_N)"
 msgid "Other Icon"
 msgstr "其他圖示"
 
+# NOTE 譯文改動by Ambrose
 #: panel/item_dialog.c:622
 msgid "Drag file onto this frame to change the icon"
-msgstr "拖曳檔案到框架中以改變圖示"
+msgstr "要改變圖示，拖曳檔案到此框架內即可"
 
 #: panel/item_dialog.c:917
 msgid "Caption:"
@@ -81,9 +78,8 @@ msgstr "改變選單項目"
 
 #. add buttons
 #: panel/item_dialog.c:1200 panel/controls.c:728
-#, fuzzy
 msgid "_Remove"
-msgstr "/移除(_R)"
+msgstr "移除(_R)"
 
 #: panel/item_dialog.c:1212 panel/item.c:668
 msgid "Launcher"
@@ -105,8 +101,9 @@ msgstr "增加新項目"
 msgid "Are you sure you want to exit?"
 msgstr "你確定要退出？"
 
+# TODO check translation
 #: panel/main.c:398
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "\n"
 " The Xfce Panel\n"
@@ -118,34 +115,38 @@ msgid ""
 " Licensed under the GNU GPL.\n"
 "\n"
 msgstr ""
-"%s, 版本 %s\n"
+"\n"
+"Xfce 面板\n"
+"版本 %s\n"
+"\n"
 "Xfce 桌面環境的組成部分\n"
 "http://www.xfce.org\n"
+"\n"
+"以 GNU GPL 方式授權發行。\n"
+"\n"
 
 #: panel/main.c:472
 #, c-format
 msgid "%s: Successfully started without session management"
-msgstr ""
+msgstr "%s: 成功啟動，但無法使用工作階段管理"
 
 #: panel/main.c:477
 #, c-format
 msgid "%s: Successfully started with session management"
-msgstr ""
+msgstr "%s: 成功啟動，並使用工作階段管理"
 
 #: panel/controls.c:646
 #, c-format
 msgid "Could not create panel item \"%s\"."
-msgstr ""
+msgstr "無法建立面板項目「%s」。"
 
 #: panel/controls.c:723 panel/panel.c:562
-#, fuzzy
 msgid "_Properties..."
-msgstr "/屬性(_P)..."
+msgstr "屬性(_P)..."
 
 #: panel/controls.c:737 panel/panel.c:552
-#, fuzzy
 msgid "Add _new item"
-msgstr "/增加新項目(_N)"
+msgstr "增加新項目(_N)"
 
 #: panel/controls.c:1020
 msgid "This item has no configuration options"
@@ -157,29 +158,24 @@ msgid "Xfce Panel"
 msgstr "Xfce 面板"
 
 #: panel/panel.c:567
-#, fuzzy
 msgid "_About Xfce"
-msgstr "/關於 Xfce(_A)"
+msgstr "關於 Xfce(_A)"
 
 #: panel/panel.c:572
-#, fuzzy
 msgid "_Help"
-msgstr "/說明(_H)"
+msgstr "說明(_H)"
 
 #: panel/panel.c:581
-#, fuzzy
 msgid "_Lock screen"
-msgstr "/鎖住螢幕(_L)"
+msgstr "鎖住螢幕(_L)"
 
 #: panel/panel.c:586
-#, fuzzy
 msgid "_Restart"
-msgstr "重置(_R)"
+msgstr "重新啟動(_R)"
 
 #: panel/panel.c:595
-#, fuzzy
 msgid "E_xit"
-msgstr "/離開(_X)"
+msgstr "離開(_X)"
 
 #: panel/icons.c:60
 msgid "Default"
@@ -213,9 +209,10 @@ msgstr "多媒體"
 msgid "Network"
 msgstr "網路"
 
+# NOTE 譯文改動by Ambrose
 #: panel/icons.c:68
 msgid "Graphics"
-msgstr "圖形"
+msgstr "圖像處理"
 
 #: panel/icons.c:69
 msgid "Printer"
@@ -235,7 +232,7 @@ msgstr "終端機"
 
 #: panel/mcs_client.c:170
 msgid "Settings manager not available"
-msgstr "設定管理程式不可使用"
+msgstr "設定管理程式無法使用"
 
 #: panel/popup.c:267
 msgid "Menu"
@@ -255,7 +252,7 @@ msgstr "大"
 
 #: settings/xfce_settings_dialog.c:100
 msgid "Huge"
-msgstr ""
+msgstr "巨大"
 
 #: settings/xfce_settings_dialog.c:176
 msgid "Horizontal"
@@ -295,7 +292,7 @@ msgstr "彈出式選單位置："
 
 #: settings/xfce_settings_dialog.c:343
 msgid "Always on top:"
-msgstr ""
+msgstr "總是置頂："
 
 #: settings/xfce_settings_dialog.c:396
 msgid "Autohide:"
@@ -313,6 +310,9 @@ msgstr "外觀"
 msgid "Behaviour"
 msgstr "特性"
 
+# NOTE 假如中文內碼為UTF8, 日期格式是「xxxx年xx月xx日　星期ｘ」
+# NOTE 但如果中文內碼為五大碼，GTK會無法顯示星期，變成只有「xxxx年xx月xx日」
+# NOTE 詳情請參見 http://bugzilla.xfce.org/show_bug.cgi?id=332
 #. Use format characters from strftime(3)
 #. * to get the proper string for your locale.
 #. * I used these:
@@ -323,7 +323,7 @@ msgstr "特性"
 #.
 #: plugins/clock/clock.c:202
 msgid "%A, %d %B %Y"
-msgstr ""
+msgstr "%Y年%m月%d日　%A"
 
 #: plugins/clock/clock.c:423
 msgid "Clock type:"
@@ -367,11 +367,11 @@ msgstr "Xfce 時鐘"
 
 #: plugins/pager/pager.c:311
 msgid "Number of rows:"
-msgstr ""
+msgstr "行數："
 
 #: plugins/pager/pager.c:313
 msgid "Number of columns:"
-msgstr ""
+msgstr "列數："
 
 #: plugins/pager/pager.c:360
 msgid "Graphical pager"
@@ -387,9 +387,9 @@ msgid ""
 "\n"
 "Ask your system administrator for more information"
 msgstr ""
-"設定系統的作業已被禁止.\n"
+"設定系統的作業已被禁止。\n"
 "\n"
-"請向你的系統管理員諮詢以得到更多的資訊"
+"詳情請向你的系統管理員諮詢"
 
 #: plugins/systembuttons/systembuttons.c:170
 msgid "Lock the screen"
@@ -426,9 +426,8 @@ msgstr "按鈕 2："
 
 #. checkbox
 #: plugins/systembuttons/systembuttons.c:579
-#, fuzzy
 msgid "_Hide"
-msgstr "/說明(_H)"
+msgstr "隱藏(_H)"
 
 #: plugins/systembuttons/systembuttons.c:616
 msgid "System buttons"
@@ -443,14 +442,12 @@ msgid "Mail box:"
 msgstr "郵件箱："
 
 #: plugins/mailcheck/mailcheck.c:824
-#, fuzzy
 msgid "New mail command:"
-msgstr "郵件指令："
+msgstr "新郵件指令："
 
 #: plugins/mailcheck/mailcheck.c:838
-#, fuzzy
 msgid "Command to run when new mail arrives"
-msgstr "在面板上點選該按鈕時所執行的指令"
+msgstr "有新郵件時所執行的指令"
 
 #: plugins/mailcheck/mailcheck.c:868
 msgid "Command to run when the button on the panel is clicked"
@@ -461,7 +458,6 @@ msgid "Interval (sec):"
 msgstr "間隔（秒）："
 
 #: plugins/mailcheck/mailcheck.c:965
-#, fuzzy
 msgid "Mail checker"
 msgstr "檢查郵件"
 
