updated Italian translations from Luca Marrocco <buildup@libero.it>
(Old svn revision: 4162)

--- a/po/it.po
+++ b/po/it.po
@@ -10,6 +10,7 @@ msgstr ""
 "POT-Creation-Date: 2004-09-21 13:35+0200\n"
 "PO-Revision-Date: 2004-03-11 13:45+0100\n"
 "Last-Translator: Alex Dupre <ale@FreeBSD.org>\n"
+"Last-Translator: Luca Marrocco <buildup@libero.it>\n"
 "Language-Team: GUFI <traduzioni@gufi.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -21,7 +22,7 @@ msgstr "Seleziona il file"
 
 #: panel/settings.c:179
 msgid "No data was found. The panel will be empty."
-msgstr ""
+msgstr "Nessun dato e' stato trovate. Il pannello deve essere vuoto."
 
 #: panel/controls_dialog.c:89 panel/item_dialog.c:1157
 msgid "Position:"
@@ -126,17 +127,17 @@ msgstr ""
 #: panel/main.c:472
 #, c-format
 msgid "%s: Successfully started without session management"
-msgstr ""
+msgstr "%s: Avviato con successo senza la gestione della sessione"
 
 #: panel/main.c:477
 #, c-format
 msgid "%s: Successfully started with session management"
-msgstr ""
+msgstr "%s: Avviato con successo con la gestione della sessione"
 
 #: panel/controls.c:646
 #, c-format
 msgid "Could not create panel item \"%s\"."
-msgstr ""
+msgstr "L'elemento \"%s\" del pannelo non puo essere creato."
 
 #: panel/controls.c:723 panel/panel.c:562
 #, fuzzy
@@ -174,7 +175,7 @@ msgstr "/_Blocca schermo"
 
 #: panel/panel.c:586
 msgid "_Restart"
-msgstr ""
+msgstr "_Riparti"
 
 #: panel/panel.c:595
 #, fuzzy
@@ -367,11 +368,11 @@ msgstr "Orologio di Xfce"
 
 #: plugins/pager/pager.c:311
 msgid "Number of rows:"
-msgstr ""
+msgstr "Numero di righe:"
 
 #: plugins/pager/pager.c:313
 msgid "Number of columns:"
-msgstr ""
+msgstr "Numero di colonne:"
 
 #: plugins/pager/pager.c:360
 msgid "Graphical pager"
