Punjabi translations (PA) from jaswinderlinux@netscape.net
(Old svn revision: 4168)

--- a/po/pa.po
+++ b/po/pa.po
@@ -287,7 +287,7 @@ msgstr "ਪੈਨਲ ਸਥਿਤੀ:"
 
 #: settings/xfce_settings_dialog.c:304
 msgid "Popup position:"
-msgstr "ਪੋਪਅੱਪ ਸਥਿਤੀ:"
+msgstr "ਪੌਪ-ਅੱਪ ਸਥਿਤੀ:"
 
 #: settings/xfce_settings_dialog.c:343
 msgid "Always on top:"
@@ -351,11 +351,11 @@ msgstr "੧੨ ਘੰਟੇ"
 
 #: plugins/clock/clock.c:525
 msgid "AM/PM"
-msgstr "AM/PM"
+msgstr "ਪੂਃਦੁਃ/ਬਾਃਦੁਃ"
 
 #: plugins/clock/clock.c:563
 msgid "Show seconds:"
-msgstr "ਸਕਿੰਟ ਵੇਖਾਓ:"
+msgstr "ਸਕਿੰਟ ਵਿਖਾਓ:"
 
 #: plugins/clock/clock.c:674
 msgid "Xfce Clock"
