fix missing strings, spelling mistakes, and context mistakes
(Old svn revision: 4173)

--- a/po/es.po
+++ b/po/es.po
@@ -10,7 +10,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-09-21 13:35+0200\n"
 "PO-Revision-Date: 2004-01-13 00:00+0100\n"
-"Last-Translator: Jaime Buffery <nestu@lunar-linux.org>\n"
+"Last-Translator: Edscott Wilson García <edscott@xfce.org>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -22,24 +22,20 @@ msgstr "Seleccionar archivo"
 
 #: panel/settings.c:179
 msgid "No data was found. The panel will be empty."
-msgstr ""
+msgstr "No se encontró información. El panel estará vacío"
 
 #: panel/controls_dialog.c:89 panel/item_dialog.c:1157
 msgid "Position:"
 msgstr "Posición"
 
 #: panel/controls_dialog.c:153
-#, fuzzy
+
 msgid "Item properties"
-msgstr "/_Propiedades..."
+msgstr "Propiedades del elemento"
 
 #: panel/controls_dialog.c:207 panel/controls.c:691
-#, fuzzy
 msgid "Removing the item will also remove its popup menu."
-msgstr ""
-"Quitar un elemento también quitará su menú emergente.\n"
-"\n"
-"Desea quitar el elemento?"
+msgstr "Quitar el elemento también quitará su menú emergente."
 
 #: panel/item_dialog.c:123 panel/item_dialog.c:551
 msgid "Select command"
@@ -59,7 +55,7 @@ msgstr "Usar notificación de arranque"
 
 #: panel/item_dialog.c:511
 msgid "Other Icon"
-msgstr "Otro Icono"
+msgstr "Otro Ícono"
 
 #: panel/item_dialog.c:622
 msgid "Drag file onto this frame to change the icon"
@@ -67,11 +63,11 @@ msgstr "Arrastre el fichero a este marco para cambiar el icono"
 
 #: panel/item_dialog.c:917
 msgid "Caption:"
-msgstr "Captura"
+msgstr "Etiqueta:"
 
 #: panel/item_dialog.c:946
 msgid "Tooltip:"
-msgstr "Etiqueta explicativa"
+msgstr "Etiqueta emergente"
 
 #: panel/item_dialog.c:974
 msgid "Attach menu to launcher"
@@ -83,9 +79,8 @@ msgstr "Cambiar elemento del menú"
 
 #. add buttons
 #: panel/item_dialog.c:1200 panel/controls.c:728
-#, fuzzy
 msgid "_Remove"
-msgstr "/_Borrar"
+msgstr "_Remover"
 
 #: panel/item_dialog.c:1212 panel/item.c:668
 msgid "Launcher"
@@ -108,7 +103,6 @@ msgid "Are you sure you want to exit?"
 msgstr "¿Está seguro de querer salir?"
 
 #: panel/main.c:398
-#, fuzzy, c-format
 msgid ""
 "\n"
 " The Xfce Panel\n"
@@ -120,34 +114,37 @@ msgid ""
 " Licensed under the GNU GPL.\n"
 "\n"
 msgstr ""
-"%s, versión %s\n"
-"Parte del Entorno de Escritorio Xfce\n"
-"http://www.xfce.org\n"
+"\n"
+" El panel Xfce\n"
+" versión %s\n"
+" Parte del Entorno de Escritorio Xfce\n"
+" http://www.xfce.org\n"
+"\n"
+" Bajo licencia GNU GPL.\n"
+"\n"
 
 #: panel/main.c:472
 #, c-format
 msgid "%s: Successfully started without session management"
-msgstr ""
+msgstr "%s: Se inició de manera correcta sin gerente de sessión"
 
 #: panel/main.c:477
 #, c-format
 msgid "%s: Successfully started with session management"
-msgstr ""
+msgstr "%s: Se inició de manera correcta con gerente de sessión"
 
 #: panel/controls.c:646
 #, c-format
 msgid "Could not create panel item \"%s\"."
-msgstr ""
+msgstr "No se pudo crear el elemento de panel \"%s\"."
 
 #: panel/controls.c:723 panel/panel.c:562
-#, fuzzy
 msgid "_Properties..."
-msgstr "/_Propiedades..."
+msgstr "_Propiedades..."
 
 #: panel/controls.c:737 panel/panel.c:552
-#, fuzzy
 msgid "Add _new item"
-msgstr "/Añadir nuevo elemento"
+msgstr "Añadir _nuevo elemento"
 
 #: panel/controls.c:1020
 msgid "This item has no configuration options"
@@ -159,29 +156,24 @@ msgid "Xfce Panel"
 msgstr "Panel Xfce"
 
 #: panel/panel.c:567
-#, fuzzy
 msgid "_About Xfce"
-msgstr "/_Acerca de Xfce"
+msgstr "_Acerca de Xfce"
 
 #: panel/panel.c:572
-#, fuzzy
 msgid "_Help"
-msgstr "/Ayuda"
+msgstr "Ayuda"
 
 #: panel/panel.c:581
-#, fuzzy
 msgid "_Lock screen"
-msgstr "/B_Loquear pantalla"
+msgstr "B_loquear pantalla"
 
 #: panel/panel.c:586
-#, fuzzy
 msgid "_Restart"
-msgstr "_Deshacer"
+msgstr "_Recomenzar"
 
 #: panel/panel.c:595
-#, fuzzy
 msgid "E_xit"
-msgstr "/Salir"
+msgstr "Salir"
 
 #: panel/icons.c:60
 msgid "Default"
@@ -197,7 +189,7 @@ msgstr "Administración de archivos"
 
 #: panel/icons.c:63
 msgid "Utilities"
-msgstr "Utilidades"
+msgstr "Utilerías"
 
 #: panel/icons.c:64
 msgid "Games"
@@ -257,7 +249,7 @@ msgstr "Grande"
 
 #: settings/xfce_settings_dialog.c:100
 msgid "Huge"
-msgstr ""
+msgstr "Enorme"
 
 #: settings/xfce_settings_dialog.c:176
 msgid "Horizontal"
@@ -297,11 +289,11 @@ msgstr "Posición del menú emergente:"
 
 #: settings/xfce_settings_dialog.c:343
 msgid "Always on top:"
-msgstr ""
+msgstr "Siempre arriba:"
 
 #: settings/xfce_settings_dialog.c:396
 msgid "Autohide:"
-msgstr "Ocultar automáticamente"
+msgstr "Ocultar automáticamente:"
 
 #: settings/xfce_settings_dialog.c:465
 msgid "Xfce Panel Settings"
@@ -325,7 +317,7 @@ msgstr "Comportamiento"
 #.
 #: plugins/clock/clock.c:202
 msgid "%A, %d %B %Y"
-msgstr ""
+msgstr "%A, %d %B %Y"
 
 #: plugins/clock/clock.c:423
 msgid "Clock type:"
@@ -337,7 +329,7 @@ msgstr "Analógico"
 
 #: plugins/clock/clock.c:440
 msgid "Digital"
-msgstr "Digital"
+msgstr "Dígital"
 
 #: plugins/clock/clock.c:444
 msgid "LED"
@@ -345,10 +337,10 @@ msgstr "LED"
 
 #: plugins/clock/clock.c:506
 msgid "Hour mode:"
-msgstr "Modo Horario"
+msgstr "Modo Horario:"
 
 #: plugins/clock/clock.c:513
-#, fuzzy
+
 msgid "24 hour"
 msgstr "24 horas"
 
@@ -370,11 +362,11 @@ msgstr "Reloj de Xfce"
 
 #: plugins/pager/pager.c:311
 msgid "Number of rows:"
-msgstr ""
+msgstr "Número de filas:"
 
 #: plugins/pager/pager.c:313
 msgid "Number of columns:"
-msgstr ""
+msgstr "Número de columnas"
 
 #: plugins/pager/pager.c:360
 msgid "Graphical pager"
@@ -428,9 +420,8 @@ msgstr "Botón 2:"
 
 #. checkbox
 #: plugins/systembuttons/systembuttons.c:579
-#, fuzzy
 msgid "_Hide"
-msgstr "/Ayuda"
+msgstr "Ocultar"
 
 #: plugins/systembuttons/systembuttons.c:616
 msgid "System buttons"
@@ -445,14 +436,12 @@ msgid "Mail box:"
 msgstr "Buzón de correo:"
 
 #: plugins/mailcheck/mailcheck.c:824
-#, fuzzy
 msgid "New mail command:"
-msgstr "Programa de correo:"
+msgstr "Nuevo commando de correo:"
 
 #: plugins/mailcheck/mailcheck.c:838
-#, fuzzy
 msgid "Command to run when new mail arrives"
-msgstr "Comando a ejecutar cuando se pinche en el botón del panel"
+msgstr "Comando a ejecutar cuando llega correo"
 
 #: plugins/mailcheck/mailcheck.c:868
 msgid "Command to run when the button on the panel is clicked"
@@ -463,183 +452,7 @@ msgid "Interval (sec):"
 msgstr "Intervalo (seg):"
 
 #: plugins/mailcheck/mailcheck.c:965
-#, fuzzy
 msgid "Mail checker"
-msgstr "Revisar correo"
+msgstr "Revisador de correo"
 
-#~ msgid "Remove"
-#~ msgstr "Borrar"
 
-#~ msgid "Show two buttons:"
-#~ msgstr "Mostrar dos botones"
-
-#~ msgid "Change item"
-#~ msgstr "Cambiar elemento"
-
-#~ msgid "Menu:"
-#~ msgstr "Menú:"
-
-#~ msgid "/Xfce Panel"
-#~ msgstr "/Panel Xfce"
-
-#~ msgid "/Add _new item"
-#~ msgstr "/Añadir nuevo elemento"
-
-#~ msgid "/_Properties..."
-#~ msgstr "/_Propiedades..."
-
-#~ msgid "Select icon"
-#~ msgstr "Seleccionar icono"
-
-#~ msgid "Icon:"
-#~ msgstr "Icono:"
-
-#~ msgid "Icon Preview"
-#~ msgstr "Vista preliminar del icono"
-
-#~ msgid ""
-#~ "Your window manager does not seem to support the new window manager hints "
-#~ "as defined on http://www.freedesktop.org. \n"
-#~ "Some Xfce features may not work as intended."
-#~ msgstr ""
-#~ "Su gestor de ventanas no parece que soporte las nuevas funcionalidades "
-#~ "como se definen en http://www.freedesktop.org. \n"
-#~ "Algunas características puede que no funcionen adecuadamente."
-
-#~ msgid "/_Settings manager"
-#~ msgstr "/Administrador de configuración"
-
-#~ msgid "Tiny"
-#~ msgstr "Pequeñito"
-
-#~ msgid "Icon theme:"
-#~ msgstr "Tema de los iconos:"
-
-#~ msgid "Panel layer:"
-#~ msgstr "Nivel del panel:"
-
-#~ msgid "Normal"
-#~ msgstr "Normal"
-
-#~ msgid "Center the panel:"
-#~ msgstr "Centrar el panel:"
-
-#~ msgid "Set"
-#~ msgstr "Configurar"
-
-#~ msgid "Position"
-#~ msgstr "Posición"
-
-#~ msgid "Sunday"
-#~ msgstr "Domingo"
-
-#~ msgid "Monday"
-#~ msgstr "Lunes"
-
-#~ msgid "Tuesday"
-#~ msgstr "Martes"
-
-#~ msgid "Wednesday"
-#~ msgstr "Miércoles"
-
-#~ msgid "Thursday"
-#~ msgstr "Jueves"
-
-#~ msgid "Friday"
-#~ msgstr "Viernes"
-
-#~ msgid "Saturday"
-#~ msgstr "Sábado"
-
-#~ msgid "January"
-#~ msgstr "Enero"
-
-#~ msgid "February"
-#~ msgstr "Febrero"
-
-#~ msgid "March"
-#~ msgstr "Marzo"
-
-#~ msgid "April"
-#~ msgstr "Abril"
-
-#~ msgid "May"
-#~ msgstr "Mayo"
-
-#~ msgid "June"
-#~ msgstr "Junio"
-
-#~ msgid "July"
-#~ msgstr "Julio"
-
-#~ msgid "August"
-#~ msgstr "Agosto"
-
-#~ msgid "September"
-#~ msgstr "Septiembre"
-
-#~ msgid "October"
-#~ msgstr "Octubre"
-
-#~ msgid "November"
-#~ msgstr "Noviembre"
-
-#~ msgid "December"
-#~ msgstr "Diciembre"
-
-#~ msgid "_Done"
-#~ msgstr "Termina_Do"
-
-#~ msgid "Type:"
-#~ msgstr "Tipo:"
-
-#~ msgid "Add item"
-#~ msgstr "Añladir nuevo elemento"
-
-#~ msgid "Xfce Desktop Environment"
-#~ msgstr "Entorno de Escritorio Xfce"
-
-#~ msgid "Copyright 2002-2003 by Olivier Fourdan"
-#~ msgstr "Copyright 2002-2003, Olivier Fourdan"
-
-#~ msgid "Credits"
-#~ msgstr "Créditos"
-
-#~ msgid "License"
-#~ msgstr "Licencia"
-
-#~ msgid "/_Panel settings"
-#~ msgstr "/Configuración del _Panel"
-
-#~ msgid "Trashcan: 0 files"
-#~ msgstr "Cubo de basura: 0 archivos"
-
-#~ msgid "Trashcan: %d files / %d %s"
-#~ msgstr "Cubo de basura: %d archivos / %d %s"
-
-#~ msgid "Trash can"
-#~ msgstr "Cubo de basura"
-
-#~ msgid "Xfce 4"
-#~ msgstr "Xfce 4"
-
-#~ msgid "By Olivier Fourdan (c) 1997-2003"
-#~ msgstr "Por Olivier Fourdan (c) 1997-2003"
-
-#~ msgid "Toggle AM PM mode :"
-#~ msgstr "Intercambiar modo AM PM"
-
-#~ msgid "/_Edit ..."
-#~ msgstr "/_Editar ..."
-
-#~ msgid "Traditional"
-#~ msgstr "Tradicional"
-
-#~ msgid "Modern"
-#~ msgstr "Moderno"
-
-#~ msgid "Panel style:"
-#~ msgstr "Estilo del panel"
-
-#~ msgid "Show minibuttons"
-#~ msgstr "Mostrar minibotones"
