--- a/po/fa.po
+++ b/po/fa.po
@@ -10,13 +10,13 @@ msgstr ""
 "Project-Id-Version: fa_IR\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-09-21 13:35+0200\n"
-"PO-Revision-Date: 2004-02-22 21:37+0330\n"
+"PO-Revision-Date: 2004-09-28 20:20+0330\n"
 "Last-Translator: Abbas Izad <abbasizad@hotmail.com>\n"
-"Language-Team: Persian <fa@li.org>\n"
+"Language-Team: Persian\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.0.2\n"
+"X-Generator: KBabel 1.3\n"
 
 #: panel/xfce_support.c:514
 msgid "Select file"
@@ -24,24 +24,19 @@ msgstr "انتخاب کردن پرونده"
 
 #: panel/settings.c:179
 msgid "No data was found. The panel will be empty."
-msgstr ""
+msgstr "هیچ داده‌ای یافت نشد. تابلو خالی خواهد بود."
 
 #: panel/controls_dialog.c:89 panel/item_dialog.c:1157
 msgid "Position:"
 msgstr "موقعیت:"
 
 #: panel/controls_dialog.c:153
-#, fuzzy
 msgid "Item properties"
-msgstr "/_مشخصات..."
+msgstr "مشخصات آیتم"
 
 #: panel/controls_dialog.c:207 panel/controls.c:691
-#, fuzzy
 msgid "Removing the item will also remove its popup menu."
-msgstr ""
-"برداشتن آیتمی فهرست واشوی آن را نیز برخواهد داشت.\n"
-"\n"
-"آیا می‌خواهید آیتم را بردارید؟"
+msgstr "برداشتن آیتمی فهرست واشوی آن را نیز برخواهد داشت."
 
 #: panel/item_dialog.c:123 panel/item_dialog.c:551
 msgid "Select command"
@@ -85,9 +80,8 @@ msgstr "تغییر دادن آیتم فهرست"
 
 #. add buttons
 #: panel/item_dialog.c:1200 panel/controls.c:728
-#, fuzzy
 msgid "_Remove"
-msgstr "/_برداشتن"
+msgstr "_برداشتن"
 
 #: panel/item_dialog.c:1212 panel/item.c:668
 msgid "Launcher"
@@ -110,7 +104,7 @@ msgid "Are you sure you want to exit?"
 msgstr "آیا مطمئن هستید که می‌خواهید خارج شوید؟"
 
 #: panel/main.c:398
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "\n"
 " The Xfce Panel\n"
@@ -122,34 +116,38 @@ msgid ""
 " Licensed under the GNU GPL.\n"
 "\n"
 msgstr ""
-"%s, نسخه %s\n"
-"بخشی از محیط رومیزی Xfce\n"
-"http://www.xfce.org\n"
+"\n"
+" The Xfce Panel\n"
+" Version %s\n"
+"\n"
+" Part of the Xfce Desktop Environment\n"
+" http://www.xfce.org\n"
+"\n"
+" Licensed under the GNU GPL.\n"
+"\n"
 
 #: panel/main.c:472
 #, c-format
 msgid "%s: Successfully started without session management"
-msgstr ""
+msgstr "%s: با موفقیت بدون مدیریت نشست شروع گردید"
 
 #: panel/main.c:477
 #, c-format
 msgid "%s: Successfully started with session management"
-msgstr ""
+msgstr "%s: با موفقیت با مدیریت نشست شروع گردید"
 
 #: panel/controls.c:646
 #, c-format
 msgid "Could not create panel item \"%s\"."
-msgstr ""
+msgstr "نمی‌توان آیتم \"%s\" تابلو را ایجاد کرد."
 
 #: panel/controls.c:723 panel/panel.c:562
-#, fuzzy
 msgid "_Properties..."
-msgstr "/_مشخصات..."
+msgstr "_مشخصات..."
 
 #: panel/controls.c:737 panel/panel.c:552
-#, fuzzy
 msgid "Add _new item"
-msgstr "/افزودن آیتم _جدید"
+msgstr "افزودن آیتم _جدید"
 
 #: panel/controls.c:1020
 msgid "This item has no configuration options"
@@ -161,29 +159,24 @@ msgid "Xfce Panel"
 msgstr "تابلوی Xfce"
 
 #: panel/panel.c:567
-#, fuzzy
 msgid "_About Xfce"
-msgstr "/_درباره‌ی Xfce"
+msgstr "_درباره‌ی Xfce"
 
 #: panel/panel.c:572
-#, fuzzy
 msgid "_Help"
-msgstr "/_راهنما"
+msgstr "_راهنما"
 
 #: panel/panel.c:581
-#, fuzzy
 msgid "_Lock screen"
-msgstr "/_قفل کردن صفحه"
+msgstr "_قفل کردن صفحه"
 
 #: panel/panel.c:586
-#, fuzzy
 msgid "_Restart"
-msgstr "/_راه‌اندازی مجدد"
+msgstr "_راه‌اندازی مجدد"
 
 #: panel/panel.c:595
-#, fuzzy
 msgid "E_xit"
-msgstr "/_خروج"
+msgstr "_خروج"
 
 #: panel/icons.c:60
 msgid "Default"
@@ -259,7 +252,7 @@ msgstr "بزرگ"
 
 #: settings/xfce_settings_dialog.c:100
 msgid "Huge"
-msgstr ""
+msgstr "عظیم"
 
 #: settings/xfce_settings_dialog.c:176
 msgid "Horizontal"
@@ -299,7 +292,7 @@ msgstr "موقعیت واشو:"
 
 #: settings/xfce_settings_dialog.c:343
 msgid "Always on top:"
-msgstr ""
+msgstr "همیشه در جلو:"
 
 #: settings/xfce_settings_dialog.c:396
 msgid "Autohide:"
@@ -326,9 +319,8 @@ msgstr "رفتار"
 #. * %Y  : four digit year
 #.
 #: plugins/clock/clock.c:202
-#, fuzzy
 msgid "%A, %d %B %Y"
-msgstr "%A, %-d %B %Y"
+msgstr "%A, %d %B %Y"
 
 #: plugins/clock/clock.c:423
 msgid "Clock type:"
@@ -372,11 +364,11 @@ msgstr "ساعت Xfce"
 
 #: plugins/pager/pager.c:311
 msgid "Number of rows:"
-msgstr ""
+msgstr "تعداد ردیف‌ها:"
 
 #: plugins/pager/pager.c:313
 msgid "Number of columns:"
-msgstr ""
+msgstr "تعداد ستون‌ها:"
 
 #: plugins/pager/pager.c:360
 msgid "Graphical pager"
@@ -430,9 +422,8 @@ msgstr "دکمه ۲:"
 
 #. checkbox
 #: plugins/systembuttons/systembuttons.c:579
-#, fuzzy
 msgid "_Hide"
-msgstr "/_راهنما"
+msgstr "_پنهان کردن"
 
 #: plugins/systembuttons/systembuttons.c:616
 msgid "System buttons"
@@ -447,14 +438,12 @@ msgid "Mail box:"
 msgstr "جعبه‌ی پست:"
 
 #: plugins/mailcheck/mailcheck.c:824
-#, fuzzy
 msgid "New mail command:"
-msgstr "فرمان پست:"
+msgstr "فرمان جدید پست:"
 
 #: plugins/mailcheck/mailcheck.c:838
-#, fuzzy
 msgid "Command to run when new mail arrives"
-msgstr "فرمان برای اجرا وقتی که دکمه‌ی بر روی تابلو کلیک شده باشد"
+msgstr "فرمان برای اجرا وقتی که پست جدید می‌آید"
 
 #: plugins/mailcheck/mailcheck.c:868
 msgid "Command to run when the button on the panel is clicked"
@@ -465,69 +454,6 @@ msgid "Interval (sec):"
 msgstr "بازه (ثانیه)"
 
 #: plugins/mailcheck/mailcheck.c:965
-#, fuzzy
 msgid "Mail checker"
-msgstr "بررسی پست"
+msgstr "بررسی‌گر پست"
 
-#~ msgid "Remove"
-#~ msgstr "برداشتن"
-
-#~ msgid "Show two buttons:"
-#~ msgstr "نشان دادن دو دکمه:"
-
-#~ msgid "Change item"
-#~ msgstr "تغییر دادن آیتم"
-
-#~ msgid "Menu:"
-#~ msgstr "فهرست:"
-
-#~ msgid "/Xfce Panel"
-#~ msgstr "/تابلوی Xfce"
-
-#~ msgid "/Add _new item"
-#~ msgstr "/افزودن آیتم _جدید"
-
-#~ msgid "/_Properties..."
-#~ msgstr "/_مشخصات..."
-
-#~ msgid "Select icon"
-#~ msgstr "انتخاب کردن شمایل"
-
-#~ msgid "Icon:"
-#~ msgstr "شمایل:"
-
-#~ msgid "Icon Preview"
-#~ msgstr "پیش‌نمای شمایل"
-
-#~ msgid ""
-#~ "Your window manager does not seem to support the new window manager hints "
-#~ "as defined on http://www.freedesktop.org. \n"
-#~ "Some Xfce features may not work as intended."
-#~ msgstr ""
-#~ "مدیر پنجره‌ی شما بنظر نمی‌رسد که از سرنخ‌های مدیر پنجره‌ی جدید همانطور که در "
-#~ "http://www.freedesktop.org تعریف شده پشتیبانی کند. \n"
-#~ "بعضی از قابلیت‌های Xfce ممکن است آنطور که باید کار نکنند."
-
-#~ msgid "/_Settings manager"
-#~ msgstr "/_مدیر تنظیمات"
-
-#~ msgid "Tiny"
-#~ msgstr "کوچولو"
-
-#~ msgid "Icon theme:"
-#~ msgstr "تم شمایل:"
-
-#~ msgid "Panel layer:"
-#~ msgstr "لایه‌ی تابلو:"
-
-#~ msgid "Normal"
-#~ msgstr "عادی"
-
-#~ msgid "Center the panel:"
-#~ msgstr "مرکزی کردن تابلو:"
-
-#~ msgid "Set"
-#~ msgstr "تعیین کردن"
-
-#~ msgid "Position"
-#~ msgstr "موقعیت"
