update ET translations
(Old svn revision: 4179)

--- a/po/et.po
+++ b/po/et.po
@@ -68,7 +68,7 @@ msgstr "Tutvustus:"
 
 #: panel/item_dialog.c:974
 msgid "Attach menu to launcher"
-msgstr "Lisa menüü käivitajale"
+msgstr "Lisa käivitajale menüü"
 
 #: panel/item_dialog.c:1194
 msgid "Change menu item"
@@ -368,7 +368,7 @@ msgstr "Veergude arv:"
 
 #: plugins/pager/pager.c:360
 msgid "Graphical pager"
-msgstr "Graafiline tööruumi näitaja"
+msgstr "Graafiline töölaua vahetaja"
 
 #: plugins/switcher/switcher.c:698
 msgid "Desktop switcher"
@@ -418,9 +418,8 @@ msgstr "Nupp 2:"
 
 #. checkbox
 #: plugins/systembuttons/systembuttons.c:579
-#, fuzzy
 msgid "_Hide"
-msgstr "_Abi"
+msgstr "_Varja"
 
 #: plugins/systembuttons/systembuttons.c:616
 msgid "System buttons"
@@ -453,9 +452,3 @@ msgstr "Intervall (sec):"
 #: plugins/mailcheck/mailcheck.c:965
 msgid "Mail checker"
 msgstr "Kirjade kontrollija"
-
-#~ msgid "Remove"
-#~ msgstr "Eemalda"
-
-#~ msgid "Show two buttons:"
-#~ msgstr "Näita kahte nuppu:"
